--- a/package.json
+++ b/package.json
@@ -1,29 +1,43 @@
 {
   "name": "nodejsfilestructure",
   "version": "1.0.0",
-  "description": "",
+  "description": "``` npm init",
+  "homepage": "https://github.com/truonganhvu205/nodejs-file-structure#readme",
+  "bugs": {
+    "url": "https://github.com/truonganhvu205/nodejs-file-structure/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/truonganhvu205/nodejs-file-structure.git"
+  },
   "license": "ISC",
   "author": "",
   "type": "commonjs",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon --inspect src/index.js",
+    "start": "cross-env NODE_ENV=production nodemon --inspect src/index.js",
     "watch": "sass --watch src/resources/sass:src/public/css"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.18.1",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose": "^8.19.1",
+    "mongoose-slug-generator": "^1.0.4",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.6",
-    "morgan": "^1.10.1",
+    "lint-staged": "^16.2.3",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2",
-    "sass": "^1.93.0"
+    "sass": "^1.93.2"
   },
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --write --single-quote --trailing-comma all --tab-width 4"
