--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.19.1",
     "mongoose-slug-generator": "^1.0.4",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "pg-promise": "^12.2.0"
   },
   "devDependencies": {
     "husky": "^9.1.7",
