--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URI='mongodb://127.0.0.1:27017/test_mongodb_nodejs'
-POSTGRE_URI='postgres://testuser:testpassword@localhost:5432/test_postgredb_nodejs'
+MONGODB_URI='mongodb://127.0.0.1:27017/test_mongodb'
+POSTGRESQL_URI='postgres://testuser:testpassword@localhost:5432/test_postgresql'
