--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
 PORT=5000
 MONGODB_URI='mongodb://127.0.0.1:27017/prod_mongodb'
-POSTGRE_URI='postgres://username:password@host:port/prod_postgredb'
+POSTGRESQL_URI='postgres://username:password@host:port/prod_postgresql'
