--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=test
 PORT=3000
 MONGODB_URI='mongodb://127.0.0.1:27017/test_mongodb'
-POSTGRESQL_URI='postgres://testuser:testpassword@localhost:5432/test_postgresql'
+POSTGRESQL_URI='postgres://test_user:test_password@localhost:5432/test_postgresql'
