--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 NODE_ENV=test
+
 PORT=3000
-MONGODB_URI='mongodb://127.0.0.1:27017/test_mongodb'
+
 POSTGRESQL_URI='postgres://test_user:test_password@localhost:5432/test_postgresql'
+MONGODB_URI='mongodb://127.0.0.1:27017/test_mongodb'
+REDIS_URI='redis://localhost:6379'
