--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,7 @@
 NODE_ENV=development
+
 PORT=4000
-MONGODB_URI='mongodb://127.0.0.1:27017/dev_mongodb'
+
 POSTGRESQL_URI='postgres://username:password@host:port/dev_postgresql'
+MONGODB_URI='mongodb://127.0.0.1:27017/dev_mongodb'
+REDIS_URI='redis://localhost:6379'
