--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,7 @@
 NODE_ENV=production
+
 PORT=5000
-MONGODB_URI='mongodb://127.0.0.1:27017/prod_mongodb'
+
 POSTGRESQL_URI='postgres://username:password@host:port/prod_postgresql'
+MONGODB_URI='mongodb://127.0.0.1:27017/prod_mongodb'
+REDIS_URI='redis://localhost:6379'
