--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongoose": "^8.10.1",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.1",
-    "pg-promise": "^12.2.0"
+    "pg-promise": "^12.2.0",
+    "redis": "^5.9.0"
   },
   "devDependencies": {
     "husky": "^9.1.7",
