--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,6 @@
 
     "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
